--- a/apex-style-guide.html
+++ b/apex-style-guide.html
@@ -3,14 +3,12 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <title>Apex Style Guide</title>
-<link rel="stylesheet" type="text/css" href="javaguide.css">
+<link rel="stylesheet" type="text/css" href="apexguide.css">
 <script language="javascript" src="include/styleguide.js"></script>
-<link rel="shortcut icon" type="image/x-icon" href="https://www.google.com/favicon.ico" />
 <script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
 </head>
-<body onload="initStyleGuide();">
 <div id="content">
-<h1>Aepx Style Guide</h1>
+<h1>Apex Style Guide</h1>
 <div class="vertical_toc" id="tocDiv"></div>
 
 <div class="main_body">
