--- a/apex-style-guide.html
+++ b/apex-style-guide.html
@@ -261,8 +261,7 @@ public void method() {
 <a name="emptyblocks"></a>
 <h4 id="s4.1.3-braces-empty-blocks">4.1.3 Empty blocks: may be concise</h4>
 
-<p>An empty block or block-like construct may be in K &amp; R style (as described in
-<a href="#s4.1.2-blocks-k-r-style">Section 4.1.2</a>). Alternatively, it may be closed immediately
+<p>An empty block or block-like construct must be closed immediately
 after it is opened, with no characters or line break in between
 (<code class="prettyprint lang-java">{}</code>), <strong>unless</strong> it is part of a
 <em>multi-block statement</em> (one that directly contains multiple blocks:
@@ -274,7 +273,7 @@ after it is opened, with no characters or line break in between
 <pre class="prettyprint lang-java">  // This is acceptable
   void doNothing() {}
 
-  // This is equally acceptable
+  // This is not acceptable
   void doNothingElse() {
   }
 </pre>
@@ -284,10 +283,10 @@ after it is opened, with no characters or line break in between
   } catch (Exception e) {}
 </pre>
 
-<h3 id="s4.2-block-indentation">4.2 Block indentation: +2 spaces</h3>
+<h3 id="s4.2-block-indentation">4.2 Block indentation: 1 tab (4 spaces)</h3>
 
-<p>Each time a new block or block-like construct is opened, the indent increases by two
-spaces. When the block ends, the indent returns to the previous indent level. The indent level
+<p>Each time a new block or block-like construct is opened, the indent increases by one
+tab (4 spaces). When the block ends, the indent returns to the previous indent level. The indent level
 applies to both code and comments throughout the block. (See the example in Section 4.1.2,
 <a href="#s4.1.2-blocks-k-r-style">Nonempty blocks: K &amp; R Style</a>.)</p>
 
@@ -392,7 +391,7 @@ code, <em>not necessarily</em> code that fits in the smallest number of lines.</
 <h4 id="s4.5.2-line-wrapping-indent">4.5.2 Indent continuation lines at least +4 spaces</h4>
 
 <p>When line-wrapping, each line after the first (each <em>continuation line</em>) is indented
-at least +4 from the original line.</p>
+at one tab (4 spaces) from the original line.</p>
 
 <p>When there are multiple continuation lines, indentation may be varied beyond +4 as
 desired. In general, two continuation lines use the same indentation level if and only if they
@@ -520,19 +519,7 @@ operator precedence table memorized.</p>
 
 <h4 id="s4.8.1-enum-classes">4.8.1 Enum classes</h4>
 
-<p>After each comma that follows an enum constant, a line break is optional. Additional blank
-lines (usually just one) are also allowed. This is one possibility:
-
-</p><pre class="prettyprint lang-java">private enum Answer {
-  YES,
-
-  NO,
-  MAYBE
-}
-</pre>
-
-<p>An enum class with no methods and no documentation on its constants may optionally be formatted
-as if it were an array initializer (see Section 4.8.3.1 on
+<p>An enum class should be formatted as if it were an array initializer (see Section 4.8.3.1 on
 <a href="#s4.8.3.1-array-initializers">array initializers</a>).</p>
 
 <pre class="prettyprint lang-java">private enum Suit { CLUBS, HEARTS, SPADES, DIAMONDS }
@@ -586,9 +573,9 @@ one or more <em>switch labels</em> (either <code class="prettyprint lang-java">w
 
 <h5 id="s4.8.4.1-switch-indentation">4.8.4.1 Indentation</h5>
 
-<p>As with any other block, the contents of a switch block are indented +2.</p>
+<p>As with any other block, the contents of a switch block are indented one tab (4 spaces).</p>
 
-<p>After a switch label, there is a line break, and the indentation level is increased +2, exactly
+<p>After a switch label, there is a line break, and the indentation level is increased one tab (4 spaces), exactly
 as if a block were being opened. The following switch label returns to the previous indentation
 level, as if a block had been closed.</p>
 
@@ -610,12 +597,6 @@ increased. Example:</p>
 
 <pre class="prettyprint lang-java">@AuraEnabled
 public String getNameIfPresent() { ... }
-</pre>
-
-<p class="exception"><strong>Exception:</strong> A <em>single</em> parameterless annotation
-<em>may</em> instead appear together with the first line of the signature, for example:</p>
-
-<pre class="prettyprint lang-java">@isTest static void test_user_access() { ... }
 </pre>
 
 <p>Annotations applying to a field also appear immediately after the documentation block,
@@ -761,7 +742,7 @@ in <a href="#s5.3-camel-case">lowerCamelCase</a>.</p>
 
 <p>Parameter names are written in <a href="#s5.3-camel-case">lowerCamelCase</a>.</p>
 
-<p>One-character parameter names in public methods should be avoided.</p>
+<p>One-character parameter names in public methods <em>are not</em> allowed.</p>
 
 <h4 id="s5.2.6-local-variable-names">5.2.6 Local variable names</h4>
 
@@ -880,8 +861,7 @@ exception of the expected type, so a comment is unnecessary here.</p>
 <pre class="prettyprint lang-java">try {
   emptyStack.pop();
   fail();
-} catch (NoSuchElementException expected) {
-}
+} catch (NoSuchElementException expected) {}
 </pre>
 
 <h3 id="s6.2-static-members">6.2 Static members: qualified using class</h3>
@@ -912,6 +892,22 @@ Foo.aStaticMethod(); // good
  */
 public Integer method(String p1) { ... }
 </pre>
+
+<p>... or this more detailed example:</p>
+
+<pre class="prettyprint lang-java">
+  /**
+  * An explaination of what this method will do
+  *
+  * @param  theParam      the passed-in parameter
+  * @return theReturned   the returned value
+  */
+  public static String doSomething(String theParam) { ... }
+</pre>
+
+<p>(As noted in section <a href="#s4.6.3-horizontal-alignment">, tabs can be used to format ApexDoc comments.
+  This is not required, but may be used due to ApexDocs not having the additional distinction of colour formatting.)
+</p>
 
 <p>... or in this single-line example:</p>
 
